Fix spacing issue causing backgrounds to break

--- a/themes/smythe/sass/modules/_site-footer.scss
+++ b/themes/smythe/sass/modules/_site-footer.scss
@@ -7,7 +7,6 @@
 .site-footer {
   background: $c-silver;
   box-shadow: 0 -2px 4px $c-shadow;
-  margin-top: scale(2.25);
   padding: 1rem 0;
 }
 
